<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>muto_core</name>
  <version>0.42.0</version>
  <description>Eclipse Muto Core - digital twin bridge that manages device registration, connectivity, telemetry, and stack state with a remote twin server</description>
  <maintainer email="info@composiv.ai">composiv.ai</maintainer>
  <license file="LICENSE">EPL-2.0</license>

  <url type="website">https://eclipse.dev/muto/</url>
  <url type="repository">https://github.com/eclipse-muto/core</url>
  <url type="bugtracker">https://github.com/eclipse-muto/core/issues</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>python3-requests</depend>
  <depend>muto_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
